# uppaal-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  shell.nix
benchmarks/: out_benchmark.xml  patch_lxml_comparison.py  patch_lxml_comparison_random.py  readwrite.py  rw_profile.py
benchmarks/ntas/: small_nta.xml
examples/generator/: README.md  test3_12_1.xml  test3_12_2.xml  test3_15_1.xml  test3_15_2.xml  test3_18_1.xml  test3_18_2.xml  test3_21_1.xml  test3_21_2.xml  test3_6_1.xml  test3_6_2.xml  test3_9_1.xml  test3_9_2.xml  test5_12_1.xml  test5_12_2.xml  test5_15_1.xml  test5_15_2.xml  test5_18_1.xml  test5_18_2.xml  test5_21_1.xml  test5_21_2.xml  test5_6_1.xml  test5_6_2.xml  test5_9_1.xml  test5_9_2.xml  test7_12_1.xml  test7_12_2.xml  test7_15_1.xml  test7_15_2.xml  test7_18_1.xml  test7_18_2.xml  test7_21_1.xml  test7_21_2.xml  test7_6_1.xml  test7_6_2.xml  test7_9_1.xml  test7_9_2.xml
examples/literature/: CAS.xml  JLR13-3tasks-npfp-100-2-uppaal_fixed.xml  Pipeline-KP12-3-3-uppaal_fixed.xml  RCP-uppaal_fixed.xml  WFAS-BBLS15-uppaal_fixed.xml  accel_1000-uppaal_fixed.xml  coffee-uppaal.xml  fischerHRSV02-2-uppaal_fixed.xml  maler_4_4-uppaal_fixed.xml  simop3-uppaal_fixed.xml  sources.txt
lib/uppaalpy/: __init__.py  core.py  path.py  path_analysis.py
tests/: helpers.py  test_path_reachable.py  test_read.py  test_write.py
tests/broken_nta/: broken_nta_3.xml
tests/broken_xml/: broken_2.xml  test7_12_1.xml  test7_15_1.xml  test7_21_2.xml  test7_6_2.xml  (+1 more)
uppaalpy/: __init__.py  constraint.py  core.py  nta.py  path.py
(+142 files in other folders)
