[tool.poetry]
name = "uppaal-py"
version = "0.0.3"
description = "UPPAAL wrapper for Python."
authors = ["Deniz Koluaçık <koluacik@disroot.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/koluacik/uppaal-py"
packages = [
    { include = "uppaalpy", from = "lib" }
]

[tool.poetry.dependencies]
python = "^3.8"
ortools = ">=8.1.8487"
networkx = ">=2.5"
lxml = ">=4.6.2"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
pylint = ">=2.7.2"
pydocstyle = ">=5.1.1"
pytest = ">=6.2.2"
pytest-cases = ">=3.5.2"
# lazy-object-proxy = "==1.6.0"
# pytest-runner = "==5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
